# StaticAnalyzer-WebUI

./: .gitignore  .gitmodules  CHANGELOG.md  Readme.md
.github/workflows/: aurorelease.yml  build-upload.yml
docs/: 1.项目架构.md  2.开发指南.md  3.CI&CD.md  3.编译指南.md
docs/assets/: .$业务逻辑.drawio.bkp  .$业务逻辑.drawio.dtmp  业务逻辑.drawio  项目架构.drawio
src/: docker-compose.yaml  dockercompose.yml
src/Analyzer/: .gitignore  CMakeLists.txt
src/Analyzer/include/framework/: Config.h
src/Analyzer/lib/AlgorithmService/: CMakeLists.txt  algservice.proto
src/Analyzer/tests/: CMakeLists.txt
src/Analyzer/tests/TemplateChecker/: README.md
src/Analyzer/tests/test_env/: CMakeLists.txt  README.md  hello_test.cpp
src/Analyzer/tools/gRPCServer/: CMakeLists.txt  server.cpp
src/MySQL/: dockerfile  init.sql
src/Nginx/: dockerfile
src/Nginx/config/: default.conf
src/Springboot/staticanalyzer/: pom.xml
src/Springboot/staticanalyzer/src/main/java/com/staticanalyzer/staticanalyzer/: StaticAnalyzerApplication.java
src/Springboot/staticanalyzer/src/main/java/com/staticanalyzer/staticanalyzer/algoservice/: AlgorithmService.java
src/Springboot/staticanalyzer/src/main/proto/: algservice.proto
src/Springboot/staticanalyzer/src/main/resources/: application-dev.properties  application-prod.properties  application.properties  application.yml
src/Springboot/staticanalyzer/src/test/java/com/staticanalyzer/staticanalyzer/: AlgorithmServiceTests.java  StaticAnalyzerApplicationTests.java
src/Vue/staticanalyzer/: README.md  package-lock.json  package.json
tools/: release.sh
tools/auto-changelog/: .gitignore  auto-changelog.py  last_version.txt
